Page headers added to each page and styled with font-family, font-size, letter spacing and font-color. Padding added to top and left of page header to ensure its not touching the borders

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -98,6 +98,15 @@ main {
     margin-top: 68px;
 }
 
+h2 {
+    padding-top: 4%;
+    padding-left: 3%;
+    font-family: 'Josefin-Sans', sans-serif;
+    font-size: 300%;
+    letter-spacing: 3px;
+    color: darkred;
+}
+
 
 /* Footer styles */
 footer {
